# transformer-prune

./: Dockerfile  generate_target_path_models.py  pyproject.toml  transformer_target_path_pruning.py  transformer_target_path_pruning_experiments.py  transformer_target_path_pruning_histograms.py
prune/: __init__.py  __main__.py  data.py  evaluate.py  metrics.py  models.py  train.py  types.py
prune/pruners/: default.py  neural.py  platon.py
scripts/: transformer_target_path_pruning_experiments.py  transformer_target_path_pruning_histograms.py
tests/: test_imports.py
