[tool.poetry]
name = "prune"
version = "0.1.0"
description = ""
authors = ["Raini Wu <rainiwu@ucsd.edu>, Jacob Ayers <jgayers@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.29.2"
datasets = "^2.12.0"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
